--- a/public/output.css
+++ b/public/output.css
@@ -612,11 +612,6 @@ video {
   top: 50%;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .-mt-0 {
   margin-top: -0px;
 }
@@ -625,24 +620,8 @@ video {
   margin-top: -0.5rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.-mt-10 {
-  margin-top: -2.5rem;
-}
-
 .-mt-8 {
   margin-top: -2rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
 }
 
 .mb-10 {
@@ -651,6 +630,10 @@ video {
 
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .mt-2 {
@@ -671,6 +654,10 @@ video {
 
 .aspect-square {
   aspect-ratio: 1 / 1;
+}
+
+.h-3 {
+  height: 0.75rem;
 }
 
 .h-\[15\%\] {
@@ -697,44 +684,24 @@ video {
   height: 90vh;
 }
 
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-\[90\%\] {
-  height: 90%;
-}
-
 .h-full {
   height: 100%;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-\[30\%\] {
-  height: 30%;
-}
-
-.h-\[10\%\] {
-  height: 10%;
 }
 
 .min-h-screen {
   min-height: 100vh;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
 .w-\[80\%\] {
   width: 80%;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .w-\[90vw\] {
@@ -743,34 +710,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-\[30\%\] {
-  width: 30%;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-12 {
-  width: 3rem;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-8 {
-  width: 2rem;
 }
 
 .-translate-x-1\/2 {
@@ -789,10 +728,6 @@ video {
 
 .grid-flow-col {
   grid-auto-flow: column;
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -815,24 +750,16 @@ video {
   justify-content: space-evenly;
 }
 
-.justify-items-start {
-  justify-items: start;
-}
-
 .justify-items-center {
   justify-items: center;
 }
 
-.justify-items-stretch {
-  justify-items: stretch;
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-6 {
   gap: 1.5rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .overflow-hidden {
@@ -855,10 +782,6 @@ video {
   border-width: 1px;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
 .border-y-2 {
   border-top-width: 2px;
   border-bottom-width: 2px;
@@ -872,31 +795,10 @@ video {
   border-color: rgb(255 255 255 / 0.05);
 }
 
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
-}
-
-.border-x-black {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
-  border-right-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
-}
-
-.border-y-black {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
-  border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
-}
-
 .border-y-gray-800 {
   --tw-border-opacity: 1;
   border-top-color: rgb(31 41 55 / var(--tw-border-opacity, 1));
   border-bottom-color: rgb(31 41 55 / var(--tw-border-opacity, 1));
-}
-
-.bg-white\/10 {
-  background-color: rgb(255 255 255 / 0.1);
 }
 
 .bg-gray-100 {
@@ -904,20 +806,32 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
 }
 
+.bg-white\/10 {
+  background-color: rgb(255 255 255 / 0.1);
+}
+
 .bg-white\/20 {
   background-color: rgb(255 255 255 / 0.2);
+}
+
+.bg-white\/30 {
+  background-color: rgb(255 255 255 / 0.3);
+}
+
+.bg-white\/15 {
+  background-color: rgb(255 255 255 / 0.15);
 }
 
 .bg-\[url\(\'\/images\/bg-desktop\.png\'\)\] {
   background-image: url('/images/bg-desktop.png');
 }
 
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
 .bg-\[url\(\'\/images\/bg-desktop2\.png\'\)\] {
   background-image: url('/images/bg-desktop2.png');
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .from-blue-700 {
@@ -936,6 +850,11 @@ video {
 
 .bg-center {
   background-position: center;
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .object-cover {
@@ -961,11 +880,6 @@ video {
   padding-bottom: 4rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -975,8 +889,12 @@ video {
   line-height: 2.25rem;
 }
 
-.text-\[clamp\(1rem\2c 1\.5vw\2c 1\.5rem\)\] {
-  font-size: clamp(1rem,1.5vw,1.5rem);
+.text-\[clamp\(1\.5rem\2c 2\.5vw\2c 2rem\)\] {
+  font-size: clamp(1.5rem,2.5vw,2rem);
+}
+
+.text-\[clamp\(1rem\2c 1vw\2c 1\.8rem\)\] {
+  font-size: clamp(1rem,1vw,1.8rem);
 }
 
 .text-base {
@@ -984,61 +902,9 @@ video {
   line-height: 1.5rem;
 }
 
-.text-\[clamp\(1rem\2c 1\.5vw\2c 1\.2rem\)\] {
-  font-size: clamp(1rem,1.5vw,1.2rem);
-}
-
-.text-\[clamp\(1rem\2c 1\.5vw\2c 1\.3rem\)\] {
-  font-size: clamp(1rem,1.5vw,1.3rem);
-}
-
-.text-\[clamp\(1rem\2c 1\.2vw\2c 1\.2rem\)\] {
-  font-size: clamp(1rem,1.2vw,1.2rem);
-}
-
-.text-\[clamp\(1rem\2c 1vw\2c 1\.2rem\)\] {
-  font-size: clamp(1rem,1vw,1.2rem);
-}
-
-.text-\[clamp\(1rem\2c 1vw\2c 1\.4rem\)\] {
-  font-size: clamp(1rem,1vw,1.4rem);
-}
-
-.text-\[clamp\(1rem\2c 1vw\2c 1\.6rem\)\] {
-  font-size: clamp(1rem,1vw,1.6rem);
-}
-
-.text-\[clamp\(1rem\2c 1vw\2c 1\.7rem\)\] {
-  font-size: clamp(1rem,1vw,1.7rem);
-}
-
-.text-\[clamp\(1rem\2c 1vw\2c 1\.8rem\)\] {
-  font-size: clamp(1rem,1vw,1.8rem);
-}
-
-.text-\[clamp\(0\.9rem\2c 2vw\2c 1\.2rem\)\] {
-  font-size: clamp(0.9rem,2vw,1.2rem);
-}
-
-.text-\[clamp\(1rem\2c 2vw\2c 1\.5rem\)\] {
-  font-size: clamp(1rem,2vw,1.5rem);
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.text-\[clamp\(1rem\2c 2vw\2c 2rem\)\] {
-  font-size: clamp(1rem,2vw,2rem);
-}
-
-.text-\[clamp\(1rem\2c 2\.5vw\2c 2rem\)\] {
-  font-size: clamp(1rem,2.5vw,2rem);
-}
-
-.text-\[clamp\(1\.5rem\2c 2\.5vw\2c 2rem\)\] {
-  font-size: clamp(1.5rem,2.5vw,2rem);
 }
 
 .font-bold {
@@ -1071,17 +937,6 @@ video {
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.backdrop-blur-lg {
-  --tw-backdrop-blur: blur(16px);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.transition-transform {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1094,8 +949,10 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-300 {
-  transition-duration: 300ms;
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .duration-200 {
@@ -1123,12 +980,28 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.group:hover .group-hover\:text-\[clamp\(1\.5rem\2c 2vw\2c 1\.5rem\)\] {
+  font-size: clamp(1.5rem,2vw,1.5rem);
+}
+
 .group:hover .group-hover\:text-\[clamp\(1rem\2c 2vw\2c 1\.5rem\)\] {
   font-size: clamp(1rem,2vw,1.5rem);
 }
 
-.group:hover .group-hover\:text-\[clamp\(1\.5rem\2c 2vw\2c 1\.5rem\)\] {
-  font-size: clamp(1.5rem,2vw,1.5rem);
+.group:hover .group-hover\:text-\[clamp\(1rem\2c 1\.5vw\2c 1\.5rem\)\] {
+  font-size: clamp(1rem,1.5vw,1.5rem);
+}
+
+.group:hover .group-hover\:text-\[clamp\(1rem\2c 1vw\2c 1\.5rem\)\] {
+  font-size: clamp(1rem,1vw,1.5rem);
+}
+
+.group:hover .group-hover\:text-\[clamp\(1rem\2c 1\.3vw\2c 1\.5rem\)\] {
+  font-size: clamp(1rem,1.3vw,1.5rem);
+}
+
+.group:hover .group-hover\:text-\[clamp\(1rem\2c 1\.6vw\2c 1\.5rem\)\] {
+  font-size: clamp(1rem,1.6vw,1.5rem);
 }
 
 .group:hover .group-hover\:opacity-100 {
@@ -1136,6 +1009,10 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:-mt-0 {
+    margin-top: -0px;
+  }
+
   .sm\:-mt-3 {
     margin-top: -0.75rem;
   }
@@ -1150,10 +1027,6 @@ video {
 
   .sm\:mt-4 {
     margin-top: 1rem;
-  }
-
-  .sm\:-mt-0 {
-    margin-top: -0px;
   }
 
   .sm\:h-\[22\%\] {
@@ -1184,21 +1057,6 @@ video {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
-  .sm\:py-0 {
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-
-  .sm\:py-8 {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-  }
-
-  .sm\:py-20 {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-  }
-
   .sm\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -1218,12 +1076,12 @@ video {
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:-mt-10 {
-    margin-top: -2.5rem;
+  .\32xl\:-mt-0 {
+    margin-top: -0px;
   }
 
-  .\32xl\:-mt-8 {
-    margin-top: -2rem;
+  .\32xl\:-mt-1 {
+    margin-top: -0.25rem;
   }
 
   .\32xl\:mt-2 {
@@ -1232,26 +1090,6 @@ video {
 
   .\32xl\:mt-5 {
     margin-top: 1.25rem;
-  }
-
-  .\32xl\:-mt-5 {
-    margin-top: -1.25rem;
-  }
-
-  .\32xl\:-mt-3 {
-    margin-top: -0.75rem;
-  }
-
-  .\32xl\:-mt-0 {
-    margin-top: -0px;
-  }
-
-  .\32xl\:-mt-2 {
-    margin-top: -0.5rem;
-  }
-
-  .\32xl\:-mt-1 {
-    margin-top: -0.25rem;
   }
 
   .\32xl\:h-\[25\%\] {
