--- a/public/output.css
+++ b/public/output.css
@@ -840,8 +840,18 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-green-400 {
+  --tw-gradient-from: #4ade80 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(74 222 128 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-green-400 {
   --tw-gradient-to: #4ade80 var(--tw-gradient-to-position);
+}
+
+.to-blue-700 {
+  --tw-gradient-to: #1d4ed8 var(--tw-gradient-to-position);
 }
 
 .bg-cover {
@@ -905,6 +915,10 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-\[clamp\(0\.9rem\2c 1\.2vw\2c 1\.2rem\)\] {
+  font-size: clamp(0.9rem,1.2vw,1.2rem);
 }
 
 .font-bold {
@@ -1002,6 +1016,38 @@ video {
 
 .group:hover .group-hover\:text-\[clamp\(1rem\2c 1\.6vw\2c 1\.5rem\)\] {
   font-size: clamp(1rem,1.6vw,1.5rem);
+}
+
+.group:hover .group-hover\:text-\[clamp\(1rem\2c 1\.3vw\2c 1\.3rem\)\] {
+  font-size: clamp(1rem,1.3vw,1.3rem);
+}
+
+.group:hover .group-hover\:text-\[clamp\(1rem\2c 1\.2vw\2c 1\.5rem\)\] {
+  font-size: clamp(1rem,1.2vw,1.5rem);
+}
+
+.group:hover .group-hover\:text-\[clamp\(0\.8rem\2c 1vw\2c 1\.5rem\)\] {
+  font-size: clamp(0.8rem,1vw,1.5rem);
+}
+
+.group:hover .group-hover\:text-\[clamp\(0\.9rem\2c 1vw\2c 1\.5rem\)\] {
+  font-size: clamp(0.9rem,1vw,1.5rem);
+}
+
+.group:hover .group-hover\:text-\[clamp\(0\.9rem\2c 1\.2vw\2c 1\.5rem\)\] {
+  font-size: clamp(0.9rem,1.2vw,1.5rem);
+}
+
+.group:hover .group-hover\:text-\[clamp\(0\.9rem\2c 1\.3vw\2c 1\.2rem\)\] {
+  font-size: clamp(0.9rem,1.3vw,1.2rem);
+}
+
+.group:hover .group-hover\:text-\[clamp\(0\.9rem\2c 1\.3vw\2c 1\.1rem\)\] {
+  font-size: clamp(0.9rem,1.3vw,1.1rem);
+}
+
+.group:hover .group-hover\:text-\[clamp\(0\.9rem\2c 1\.2vw\2c 1\.2rem\)\] {
+  font-size: clamp(0.9rem,1.2vw,1.2rem);
 }
 
 .group:hover .group-hover\:opacity-100 {
